entertain self fixing z-index issue with hooks

--- a/components/ValueCard.module.css
+++ b/components/ValueCard.module.css
@@ -18,6 +18,10 @@
     0 0 3rem 0 var(--color-black-faded);
 }
 
+.container * {
+  pointer-events: none;
+}
+
 .container.small {
   padding: 1.5rem;
 }
